--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -175,6 +175,15 @@ top_rows = 2
 ; to false or omit to disable ORed facets.
 orFacets = *
 
+; Any facets named in the list below will have their values run through the
+; translation code; unlisted facets will displayed as-is without translation. For
+; translated facets, be sure that all of the necessary strings are included in the
+; language files found in the languages directory. You may add a colon and the
+; name of a text domain after the field name to specify translations in a specific
+; text domain (subdirectory of the languages folder). If you comment out the lines
+; below, no facets will be translated.
+translated_facets[] = SourceType
+
 ; Prevent specific facet values from being displayed to the user.
 ; Use facet field names as keys and untranslated facet values as values.
 [HideFacetValue]
