--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -282,6 +282,12 @@ WorkKeys = year
 ; FacetCloud:[ini section]:[ini name]
 ;       Same functionality as ExpandFacets, but with a more compact interface to
 ;       allow the display of more values.
+; LibGuidesAZResults:[GET parameter]:[result limit]
+;       Display LibGuides A-Z Databases search results matching the terms found in 
+;       the specified GET parameter (default = "lookfor"), limited to a specified 
+;       number of matches (default = 5).
+; LibGuidesAZResultsDeferred:[GET parameter]:[result limit]
+;       Same as LibGuidesAZResults, but loaded via AJAX.
 ; OpenLibrarySubjects:[GET parameter]:[limit]:[date filter]:[Subject types]
 ;       Display full-text, public scans from the Open Library (OL) Subjects API.
 ;       [GET parameter] (default = "lookfor"), [limit] (default = 5),
