--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -282,6 +282,12 @@ WorkKeys = year
 ; FacetCloud:[ini section]:[ini name]
 ;       Same functionality as ExpandFacets, but with a more compact interface to
 ;       allow the display of more values.
+; LibGuidesResults:[GET parameter]:[result limit]
+;       Display LibGuides research guides search results matching the terms found in 
+;       the specified GET parameter (default = "lookfor"), limited to a specified 
+;       number of matches (default = 5).
+; LibGuidesResultsDeferred:[GET parameter]:[result limit]
+;       Same as LibGuidesResults, but loaded via AJAX.
 ; LibGuidesAZResults:[GET parameter]:[result limit]
 ;       Display LibGuides A-Z Databases search results matching the terms found in 
 ;       the specified GET parameter (default = "lookfor"), limited to a specified 
