--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -260,6 +260,12 @@ WorkKeys = year
 ;       matches (default = 5).
 ; EDSResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EDSResults, but loaded via AJAX.
+; EPFResults:[GET parameter]:[result limit]
+;       Display EPF (EBSCO Publication Finder) search results matching the terms 
+;       found in the specified GET parameter (default = "lookfor"), limited to a 
+;       specified number of matches (default = 5).
+; EPFResultsDeferred:[GET parameter]:[result limit]
+;       Same as EPFResults, but loaded via AJAX.
 ; EuropeanaResults:[url]:[requestParam]:[limit]:[unwanted data providers]
 ;       Display search results from Europeana.eu API.
 ;       Parameters (all are optional):
