--- a/local/DirLocations.ini.dist
+++ b/local/DirLocations.ini.dist
@@ -1,9 +1,10 @@
-; A parent local directory can be specified. When resolving paths to configuration files
-; this dir will also be searched if the file does not exist in the current dir.
+; A parent local directory can be specified. When resolving paths to configuration
+; files this dir will also be searched if the file does not exist in the current dir.
 [Parent_Dir]
 ; Path to the parent directory
 ;path =
-; Whether the path is relative or absolute (defaults to false)
+; Whether the path is relative to this file (true) or absolute (false).
+; Defaults to false.
 ;is_relative_path =
 
 ; Configurations for this local directory
