--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -258,22 +258,29 @@ WorkKeys = year
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
+;       See below re: [ini section] and [custom heading].
 ;       Hidden filters may be defined in the specified section of the searches.ini
-;       file; see [CatalogResultsVideoFilter] below for an example ofthis. The
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
 ;       optional custom heading overrides the default for this recommendation module.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
-; EDSResults:[GET parameter]:[result limit]
+; EDSResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display EDS search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
+;       Hidden filters may be defined in the specified section of the EDS.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ; EDSResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EDSResults, but loaded via AJAX.
-; EPFResults:[GET parameter]:[result limit]
+; EPFResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display EPF (EBSCO Publication Finder) search results matching the terms
 ;       found in the specified GET parameter (default = "lookfor"), limited to a
 ;       specified number of matches (default = 5).
+;       Hidden filters may be defined in the specified section of the EPF.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ; EPFResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EPFResults, but loaded via AJAX.
 ; EuropeanaResults:[url]:[requestParam]:[limit]:[unwanted data providers]
@@ -303,16 +310,22 @@ WorkKeys = year
 ;       who owns a subject guide whose title most closely matches the search terms.
 ;       Uses configuration in LibGuidesAPI.ini and requires configuration in
 ;       contentsecuritypolicy.ini.
-; LibGuidesResults:[GET parameter]:[result limit]
+; LibGuidesResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display LibGuides research guides search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5).
+;       Hidden filters may be defined in the specified section of the LibGuides.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ; LibGuidesResultsDeferred:[GET parameter]:[result limit]
 ;       Same as LibGuidesResults, but loaded via AJAX.
-; LibGuidesAZResults:[GET parameter]:[result limit]
+; LibGuidesAZResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display LibGuides A-Z Databases search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5).
+;       Hidden filters may be defined in the specified section of the LibGuidesAZ.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ; LibGuidesAZResultsDeferred:[GET parameter]:[result limit]
 ;       Same as LibGuidesAZResults, but loaded via AJAX.
 ; OpenLibrarySubjects:[GET parameter]:[limit]:[date filter]:[Subject types]
@@ -385,10 +398,13 @@ WorkKeys = year
 ;       specified when combining this module with a non-Summon-based search module.
 ; SummonDatabasesDeferred:[GET parameter]
 ;       Same as SummonDatabases, but loaded via AJAX.
-; SummonResults:[GET parameter]:[result limit]
+; SummonResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display Summon search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
+;       Hidden filters may be defined in the specified section of the Summon.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ; SummonResultsDeferred:[GET parameter]:[result limit]
 ;       Same as SummonResults, but loaded via AJAX.
 ; SummonTopics:[GET parameter]
@@ -397,10 +413,13 @@ WorkKeys = year
 ;       Summon search, the [GET parameter] setting will be ignored and the actual
 ;       current Summon search will be used instead.  The parameter only needs to be
 ;       specified when combining this module with a non-Summon-based search module.
-; WebResults:[GET parameter]:[result limit]
+; WebResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
 ;       Display website search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This requires the website Solr core to be active.
+;       Hidden filters may be defined in the specified section of the website.ini
+;       file; see [CatalogResultsVideoFilter] below for an example of this. The
+;       optional custom heading overrides the default for this recommendation module.
 ;
 ; Available modules recommended for use in the top area:
 ;
