--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -254,7 +254,7 @@ WorkKeys = year
 ;
 ; Available modules recommended for use in the side area:
 ;
-; CatalogResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; CatalogResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
@@ -265,7 +265,7 @@ WorkKeys = year
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
-; EDSResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; EDSResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display EDS search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
@@ -274,7 +274,7 @@ WorkKeys = year
 ;       optional custom heading overrides the default for this recommendation module.
 ; EDSResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EDSResults, but loaded via AJAX.
-; EPFResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; EPFResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display EPF (EBSCO Publication Finder) search results matching the terms
 ;       found in the specified GET parameter (default = "lookfor"), limited to a
 ;       specified number of matches (default = 5).
@@ -310,7 +310,7 @@ WorkKeys = year
 ;       who owns a subject guide whose title most closely matches the search terms.
 ;       Uses configuration in LibGuidesAPI.ini and requires configuration in
 ;       contentsecuritypolicy.ini.
-; LibGuidesResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; LibGuidesResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display LibGuides research guides search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5).
@@ -319,7 +319,7 @@ WorkKeys = year
 ;       optional custom heading overrides the default for this recommendation module.
 ; LibGuidesResultsDeferred:[GET parameter]:[result limit]
 ;       Same as LibGuidesResults, but loaded via AJAX.
-; LibGuidesAZResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; LibGuidesAZResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display LibGuides A-Z Databases search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
 ;       number of matches (default = 5).
@@ -398,7 +398,7 @@ WorkKeys = year
 ;       specified when combining this module with a non-Summon-based search module.
 ; SummonDatabasesDeferred:[GET parameter]
 ;       Same as SummonDatabases, but loaded via AJAX.
-; SummonResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; SummonResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display Summon search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).
@@ -413,7 +413,7 @@ WorkKeys = year
 ;       Summon search, the [GET parameter] setting will be ignored and the actual
 ;       current Summon search will be used instead.  The parameter only needs to be
 ;       specified when combining this module with a non-Summon-based search module.
-; WebResults:[GET parameter]:[result limit]:[ini section]:[custom heading]
+; WebResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
 ;       Display website search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This requires the website Solr core to be active.
