--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -75,6 +75,12 @@ auth_url = "https://eds-api.ebscohost.com/authservice/rest"
 ; This is the URL of the EBSCO session creation endpoint:
 session_url = "https://eds-api.ebscohost.com/edsapi/rest"
 
+; This controls whether results are loaded with JavaScript when paging or changing
+; settings. Loading results this way improves performance and accessibility, and is
+; enabled by default. Loading will automatically fall back to non-JS mode if
+; JavaScript is not supported by the browser.
+load_results_with_js = true
+
 ; This setting can be used to configure pagination control on top of results.
 ; Possible options are:
 ; empty string or false  No top pagination (default)
@@ -386,11 +392,11 @@ AU = None
 ;linkToAllDatabases = https://some.url
 
 ; Load database URLs from LibGuides.  Default is false.
-; Requires configuration in LibGuidesAPI.ini. 
+; Requires configuration in LibGuidesAPI.ini.
 ;useLibGuides = true
 
 ; Find database URLs by the LibGuides alternate names field in addition
-; to the primary name. Default is true. Requires useLibGuides = true. 
+; to the primary name. Default is true. Requires useLibGuides = true.
 ;useLibGuidesAlternateNames = false
 
 ; Map of database name (matching EDS API 'DbLabel' value) to website URL.
