--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -157,10 +157,18 @@ always_display_reset_filters = false
 ; commented out, fallback ID lookups will be disabled.
 ;fallback_id_field = previous_id_str_mv
 
+; This controls whether results are loaded with JavaScript when paging or changing
+; settings. Loading results this way improves performance and accessibility, and is
+; enabled by default. Loading will automatically fall back to non-JS mode if
+; JavaScript is not supported by the browser.
+load_results_with_js = true
+
 ; This setting can be used to configure pagination control on top of results.
 ; Possible options are:
-; empty string or false  No top pagination (default)
-; simple                 Simple next/prev button pagination
+; empty string or false  No top pagination (default when load_results_with_js is
+;                        disabled)
+; simple                 Simple next/prev button pagination (default when
+;                        load_results_with_js is enabled)
 ; full                   Full pagination alike to the one at the bottom of results
 ;top_paginator = simple
 
