--- a/themes/bootstrap3/package.json
+++ b/themes/bootstrap3/package.json
@@ -5,6 +5,7 @@
     "updateDeps": "npm update && node tools/copyDependencies.mjs"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "autocomplete.js": "vufind-org/autocomplete.js#v2.1.7",
     "jstree": "3.3.15",
     "simple-keyboard": "^3.6.0",
