--- a/themes/bootstrap3/package.json
+++ b/themes/bootstrap3/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "autocomplete.js": "vufind-org/autocomplete.js#v2.1.7",
+    "chart.js": "^4.4.0",
     "jstree": "3.3.15",
     "simple-keyboard": "^3.6.0",
     "simple-keyboard-layouts": "^3.0.0",
