--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1805,6 +1805,7 @@ hy          = "Armenian"
 uk          = "Ukrainian"
 se          = "Northern Sámi"
 mn          = "Mongolian"
+mi          = "Maaori"
 
 ; This section contains special cases for languages such as right-to-left support
 [LanguageSettings]
