--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1855,6 +1855,19 @@ era             = true      ; allow browsing of era subdivisions
 ; <result_limit> most popular entries -- it only affects display order.
 ;alphabetical_order = true
 
+; This section is used to configure bulk actions.
+[BulkActions]
+; Set the limit of items for each action. Set 0 to disable the action and hide the button.
+; Depending on your setup you may be able to increase the limits or have to decrease them
+; for the actions to work properly. limits["default"] is used for all actions that do not have
+; a limit themselves.
+limits["default"] = 100
+limits["email"] = 100
+limits["export"] = 100
+limits["print"] = 100
+limits["saveCart"] = 100
+limits["delete"] = 100
+
 ; This section controls the availability of export methods.
 ;
 ; Each entry may be a comma-separated list of contexts in which the export
