--- a/config/vufind/Folio.ini
+++ b/config/vufind/Folio.ini
@@ -11,9 +11,12 @@ tenant = diku
 ; (the default), it will only log POSTs to reduce noise.
 debug_get_requests = false
 ; Set this to a file path writeable by VuFind to capture API inputs and outputs in
-; JSON format suitable for use in test classes. This feature will only work when
-; VuFind is in development mode. Be sure to sanitize the collected data and remove
+; JSON format suitable for use in test classes. Be sure to sanitize the collected 
+; data and remove
 ; any real/sensitive data before including it in tests!
+; ATTENTION: This feature will only work when VuFind is in development mode. That
+; means you have to set the VUFIND_ENV to "development" in the apache configuration
+; If you do not so, the Folio driver will NOT WORK at all!
 ;json_log_file = "/usr/local/vufind/local/cache/folio.json"
 
 ; If set to true, the driver will use the legacy /authn/login method instead of the
