--- a/config/vufind/Folio.ini
+++ b/config/vufind/Folio.ini
@@ -11,12 +11,11 @@ tenant = diku
 ; (the default), it will only log POSTs to reduce noise.
 debug_get_requests = false
 ; Set this to a file path writeable by VuFind to capture API inputs and outputs in
-; JSON format suitable for use in test classes. Be sure to sanitize the collected 
-; data and remove
-; any real/sensitive data before including it in tests!
-; ATTENTION: This feature will only work when VuFind is in development mode. That
-; means you have to set the VUFIND_ENV to "development" in the apache configuration
-; If you do not so, the Folio driver will NOT WORK at all!
+; JSON format suitable for use in test classes. Be sure to sanitize the collected
+; data and remove any real/sensitive data before including it in tests!
+; ATTENTION: This feature will only work when VuFind is in development mode. See
+; https://vufind.org/wiki/development:troubleshooting#turn_on_development_mode
+; for instructions on enabling development mode.
 ;json_log_file = "/usr/local/vufind/local/cache/folio.json"
 
 ; If set to true, the driver will use the legacy /authn/login method instead of the
