--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "php": ">=8.1",
         "ahand/mobileesp": "dev-master",
         "apereo/phpcas": "1.6.1",
+        "browscap/browscap-php": "^7.2",
         "cap60552/php-sip2": "1.0.0",
         "colinmollenhour/credis": "1.15.0",
         "composer/package-versions-deprecated": "1.11.99.5",
@@ -93,8 +94,7 @@
         "vufind-org/vufind-marc": "1.1.0",
         "webfontkit/open-sans": "^1.0",
         "wikimedia/composer-merge-plugin": "2.1.0",
-        "yajra/laravel-pdo-via-oci8": "3.4.0",
-        "browscap/browscap-php": "^7.2"
+        "yajra/laravel-pdo-via-oci8": "3.4.0"
     },
     "require-dev": {
         "behat/mink": "1.10.0",
