--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1028,7 +1028,7 @@ coverproxyCache[] = "/assets\.thirdiron\.com/"
 ; expressions below will not be proxied. Be sure to define regular expressions
 ; using an end of string ($) marker to prevent abuse.
 coverproxyAllowedHosts[] = "/assets\.thirdiron\.com$/"
-coverproxyAllowedHosts[] = "/.*\.summon\.serialssolutions\.com$/"
+coverproxyAllowedHosts[] = "/\.summon\.serialssolutions\.com$/"
 
 ; This setting controls how cover image URLs are loaded. They could be loaded as
 ; part of main request, or asynchronously. Asynchronous loading is disabled by
