--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "composer/package-versions-deprecated": "1.11.99.5",
         "composer/semver": "3.4.0",
         "endroid/qr-code": "4.8.2",
+        "guzzlehttp/guzzle": "7.8.1",
         "laminas/laminas-cache": "3.10.1",
         "laminas/laminas-cache-storage-adapter-blackhole": "^2.0",
         "laminas/laminas-cache-storage-adapter-filesystem": "^2.0",
